Temporary fix for iOS safari custom columns modal being clipped

--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ header .lastupdated span {
 @media screen and (max-width: 480px) {
     .column-toggle-bar {
         overflow-x: auto;
-        -webkit-overflow-scrolling: touch; 
     }
 }
 
